--- a/apps/index.html
+++ b/apps/index.html
@@ -18,7 +18,7 @@
   }
   </style>
   <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/__app.css__">
 
   <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -29,7 +29,7 @@
 
   <!-- This code is taken from http://twitter.github.com/bootstrap/examples/hero.html -->
 
-  <div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -106,6 +106,9 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 
   <script src="js/vendor/bootstrap.min.js"></script>
+  <script src="js/vendor/handlebars.runtime.js"></script>
+  <script src="js/vendor/underscore-min.js"></script>
+  <script src="js/vendor/backbone-min.js"></script>
 
   <script src="js/__app.js__"></script>
 
