--- a/apps/index.html
+++ b/apps/index.html
@@ -37,51 +37,33 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="#">Project name</a>
-        <div class="nav-collapse collapse">
+        <a class="brand" href="#">SubSimpl</a>
+        <div class="btn-group pull-right">
+          <button class="btn">Settings</button>
+          <button class="btn">Login</button>
+        </div>
+      </div>
+      <div class="container">
           <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="nav-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
+            <li class="active"><a href="#manageAccount">Manage Subscriptions</a></li>
+            <li><a href="#stream">Social Stream</a></li>
           </ul>
-          <form class="navbar-form pull-right">
-            <input class="span2" type="text" placeholder="Email">
-            <input class="span2" type="password" placeholder="Password">
-            <button type="submit" class="btn">Sign in</button>
-          </form>
-        </div><!--/.nav-collapse -->
       </div>
     </div>
   </div>
 
+  <div class="navbar">
+
+  </div>
+
   <div class="container">
 
-    <!-- Main hero unit for a primary marketing message or call to action -->
-    <div class="hero-unit">
-      <h1>Hello, world!</h1>
-      <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-      <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <div class="row">
+      <div class="span12">&nbsp;</div>
     </div>
 
     <!-- Example row of columns -->
     <div class="row">
-      <div class="span4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn" href="#">View details &raquo;</a></p>
-      </div>
       <div class="span4">
         <h2>Heading</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
@@ -97,7 +79,7 @@
     <hr>
 
     <footer>
-      <p>&copy; Company 2013</p>
+      <p>&copy; SubSimpl 2013</p>
     </footer>
 
   </div> <!-- /container -->
