--- a/apps/index.html
+++ b/apps/index.html
@@ -29,7 +29,7 @@
 
   <!-- This code is taken from http://twitter.github.com/bootstrap/examples/hero.html -->
 
-  <div class="navbar navbar-fixed-top">
+  <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="container">
-          <ul class="nav">
+          <ul class="nav nav-tabs">
             <li class="active"><a href="#manageAccount">Manage Subscriptions</a></li>
             <li><a href="#stream">Social Stream</a></li>
           </ul>
@@ -52,26 +52,23 @@
     </div>
   </div>
 
-  <div class="navbar">
-
+  <div class="row">
+    <div class="span12">&nbsp;</div>
   </div>
+
 
   <div class="container">
 
     <div class="row">
-      <div class="span12">&nbsp;</div>
-    </div>
-
-    <!-- Example row of columns -->
-    <div class="row">
-      <div class="span4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn" href="#">View details &raquo;</a></p>
+      <div class="span2 bs-docs-sidebar">
+        <ul class="nav nav-list bs-docs-sidenav">
+          <li class="active"><a href="#netflix"><i class="icon-chevron-right"></i> Netflix</a></li>
+          <li><a href="#vonage"><i class="icon-chevron-right"></i> Vonage</a></li>
+        </ul>
       </div>
-      <div class="span4">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <div class="span10">
+        <h2>Netflix</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         <p><a class="btn" href="#">View details &raquo;</a></p>
       </div>
     </div>
