--- a/apps/index.html
+++ b/apps/index.html
@@ -18,6 +18,7 @@
   }
   </style>
   <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+  <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/__app.css__">
 
   <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -29,7 +30,7 @@
 
   <!-- This code is taken from http://twitter.github.com/bootstrap/examples/hero.html -->
 
-  <div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
