--- a/apps/index.html
+++ b/apps/index.html
@@ -10,7 +10,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!--link rel="stylesheet" href="css/bootstrap.min.css"-->
+  <link rel="stylesheet" href="css/default.css">
   <style>
   body {
     padding-top: 60px;
@@ -18,7 +19,6 @@
   }
   </style>
   <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-  <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/__app.css__">
 
   <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
