moved out to hbs template

--- a/apps/index.html
+++ b/apps/index.html
@@ -61,11 +61,7 @@
   <div class="container">
 
     <div class="row">
-      <div class="span2 bs-docs-sidebar">
-        <ul class="nav nav-list bs-docs-sidenav">
-          <li class="active"><a href="#netflix"><i class="icon-chevron-right"></i> Netflix</a></li>
-          <li><a href="#vonage"><i class="icon-chevron-right"></i> Vonage</a></li>
-        </ul>
+      <div id="slide_panel" class="span2 bs-docs-sidebar">
       </div>
       <div class="span10">
         <h2>Netflix</h2>
