--- a/apps/index.html
+++ b/apps/index.html
@@ -22,6 +22,13 @@
   <link rel="stylesheet" href="css/__app.css__">
 
   <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+  <script>
+    window.App = {
+      routers: {},
+      views: {},
+      models: {}
+    };
+  </script>
 </head>
 <body>
   <!--[if lt IE 7]>
