--- a/apps/index.html
+++ b/apps/index.html
@@ -104,6 +104,7 @@
   <script src="js/vendor/handlebars.runtime.js"></script>
   <script src="js/vendor/underscore-min.js"></script>
   <script src="js/vendor/backbone-min.js"></script>
+  <script src="js/vendor/backbone.localStorage.js"></script>
 
   <script src="js/__app.js__"></script>
 
