--- a/apps/index.html
+++ b/apps/index.html
@@ -77,10 +77,10 @@
     </div>
   </div>
 
+  <!-- TODO: filler, workaround css spacing issue -->
   <div class="row">
     <div class="span12">&nbsp;</div>
   </div>
-
 
   <div class="container">
 
