removing local storage, getting server side

--- a/apps/index.html
+++ b/apps/index.html
@@ -63,7 +63,7 @@
           <span class="icon-bar"></span>
         </a>
         <a class="brand" href="#">SubSimpl</a>
-        <div class="btn-group pull-right">
+        <div id="status_panel" class="btn-group pull-right">
           <button class="btn">Settings</button>
           <button class="btn">Login</button>
         </div>
@@ -104,7 +104,7 @@
   <script src="js/vendor/handlebars.runtime.js"></script>
   <script src="js/vendor/underscore-min.js"></script>
   <script src="js/vendor/backbone-min.js"></script>
-  <script src="js/vendor/backbone.localStorage.js"></script>
+  <!--script src="js/vendor/backbone.localStorage.js"></script-->
 
   <script src="js/__app.js__"></script>
 
