--- a/apps/index.html
+++ b/apps/index.html
@@ -63,9 +63,7 @@
           <span class="icon-bar"></span>
         </a>
         <a class="brand" href="#">SubSimpl</a>
-        <div id="status_panel" class="btn-group pull-right">
-          <button class="btn">Settings</button>
-          <button class="btn">Login</button>
+        <div id="status_panel" class="nav-collapse nav pull-right">
         </div>
       </div>
       <div class="container">
