--- a/apps/index.html
+++ b/apps/index.html
@@ -10,14 +10,26 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
-  <!--link rel="stylesheet" href="css/bootstrap.min.css"-->
-  <link rel="stylesheet" href="css/default.css">
-  <style>
-  body {
-    padding-top: 60px;
-    padding-bottom: 40px;
-  }
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <style type="text/css">
+    body {
+      padding-top: 60px;
+      padding-bottom: 40px;
+    }
+    .sidebar-nav {
+      padding: 9px 0;
+    }
+
+    @media (max-width: 980px) {
+      /* Enable use of floated navbar text */
+      .navbar-text.pull-right {
+        float: none;
+        padding-left: 5px;
+        padding-right: 5px;
+      }
+    }
   </style>
+  <!--link rel="stylesheet" href="css/default.css"-->
   <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
   <link rel="stylesheet" href="css/__app.css__">
 
@@ -54,36 +66,35 @@
 
   <!-- This code is taken from http://twitter.github.com/bootstrap/examples/hero.html -->
 
-  <div class="navbar navbar-fixed-top">
+  <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
-      <div class="container">
+      <div class="container-fluid">
+
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
         <a class="brand" href="#">SubSimpl</a>
-        <div id="status_panel" class="nav-collapse nav pull-right">
-        </div>
-      </div>
-      <div class="container">
-          <ul class="nav nav-tabs">
+
+        <div class="nav-collapse nav">
+          <ul class="nav">
             <li class="active"><a href="#manageAccount">Manage Subscriptions</a></li>
             <li><a href="#stream">Social Stream</a></li>
           </ul>
+        </div>
+
+        <div id="status_panel" class="nav-collapse nav pull-right">
+        </div>
+
       </div>
     </div>
-  </div>
-
-  <!-- TODO: filler, workaround css spacing issue -->
-  <div class="row">
-    <div class="span12">&nbsp;</div>
   </div>
 
   <div class="container">
 
     <div class="row">
-      <div id="side_panel" class="span2 bs-docs-sidebar"></div>
+      <!--div id="side_panel" class="span2 bs-docs-sidebar"></div-->
       <div id="center_panel" class="span10"></div>
     </div>
 
