--- a/apps/index.html
+++ b/apps/index.html
@@ -91,10 +91,10 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container-fluid">
 
     <div class="row">
-      <!--div id="side_panel" class="span2 bs-docs-sidebar"></div-->
+      <div id="side_panel" class="span2 bs-docs-sidebar"></div>
       <div id="center_panel" class="span10"></div>
     </div>
 
