--- a/apps/index.html
+++ b/apps/index.html
@@ -95,7 +95,8 @@
 
     <div class="row">
       <div id="side_panel" class="span2 bs-docs-sidebar"></div>
-      <div id="center_panel" class="span10"></div>
+      <div id="center_panel1" class="span10"></div>
+      <div id="center_panel2" class="span10"></div>
     </div>
 
     <hr>
